cargo-features = ["edition2024"]

[package]
name = "rdls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow          = "1.0.89"
iced            = { version = "0.13.1", features = ["tokio"] }
iced_layershell = "0.8.2"
iced_runtime    = { version = "0.13.2", features = ["multi-window"] }
nix             = "0.29.0"
once_cell       = "1.20.1"
serde           = { version = "1.0.210", features = ["derive"] }
serde_json      = "1.0.128"
tokio           = { version = "1.40.0", features = ["io-util", "net"] }
